--- a/configuration.conf
+++ b/configuration.conf
@@ -1,10 +1,12 @@
 ROOT_PATH=/home/benflies/github/norlux_testing_development
+
 SERVER_PATH=/home/benflies/NAS
 SERVER_NGS_PATH=/home/benflies/NAS/sequencing/NGS_DATA
 SERVER_RESULT_PATH=$SERVER_PATH/sequencing/results
-REFERENCE_PATH=/home/benflies/NGS/references
+
 LOCAL_NGS_PATH=/home/benflies/Desktop/NGS_DATA
 LOCAL_RESULT_PATH=/home/benflies/Desktop/results
+
 SCRIPT_PATH=$ROOT_PATH/scripts
 
 LOCAL_DEFUSE_PATH=/home/benflies/NAS/sequencing/tmp_defuse
@@ -25,4 +27,6 @@ DNA_PARALLEL_ALIGNMENT=2
 DNA_BWA_MEM_PARALLEL=2
 CORES_DEFUSE=2
 
-ANNOVAR_DB=/home/benflies/NGS/references/hg19_annovar
+REFERENCE_PATH=/home/benflies/NGS/references
+REFERENCE=$REFERENCE_PATH/hg19/ucsc.hg19.fa
+ANNOVAR_DB=$REFERENCE_PATH/hg19_annovar
